--- a/style.css
+++ b/style.css
@@ -642,6 +642,7 @@ div label[for=ui-component-toggle__yearly] {
 --------------------------------------------------------------*/
 
 .ui-section-footer {
+  background-color: var(--ui-color-background-secondary);
   padding-bottom: 1.25rem;
   padding-top: 1.25rem;
 }
@@ -1049,7 +1050,7 @@ div label[for=ui-component-toggle__yearly] {
 
   .ui-section-feature {
     padding-bottom: 7.5rem;
-    padding-top: 5rem;
+    padding-top: 7.5rem;
   }
 
   /*------------------------------------------------------------
